--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -98,7 +98,7 @@
   </li>
 
   <li>
-    <a ui-sref="app.dashboard">
+    <a ui-sref="dashboard">
      <span class="nav-img"><img src="img/nav-message.png"/></span>
       <span class="font-bold" translate="Messages">Messages</span>
     </a>
