--- a/browser/js/common/directives/defaultNav/authorizedNav.html
+++ b/browser/js/common/directives/defaultNav/authorizedNav.html
@@ -132,7 +132,7 @@
             <a href class="dropdown-toggle clear profile-icon" toggle-parent-class="open">
                 <span class="profile-user"><span class="hidden-sm hidden-md">{{user.firstName}} {{user.lastName}} </span><b class="caret"></b></span>
                 <span class="thumb-sm avatar  m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="{{user.profilePic}}" alt="...">
+                <img src="https://edvances.blob.core.windows.net/profile-pictures/{{user.profilePic}}" alt="...">
               </span>
                 <span class=" fa fa-angle-down"></span>
             </a>
