--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -62,15 +62,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mar-btm-30">
-                        <div class="chat-window b-b-0">
-                            <div class="cat-title"><span>{{classroom.classroom_title}}</span></div>
-                            <chat></chat>
-                        </div>
-                        <input type="text" name="" placeholder="Type message here..." class="chat-input b-t-0">
-                        <div class="chat-footer">
-                            <span>ABC
-                            <a href=""><i clas="fa fa-paperclip"></i></a>
-                        </div>
+                        <chat title="classroom.classroom_title" user="user"></chat>
                     </div>
                 </div>
                 <div class="row">
