--- a/browser/js/authorized/students/checkout/checkout.html
+++ b/browser/js/authorized/students/checkout/checkout.html
@@ -186,7 +186,7 @@
                         <div class="cart-total">
                             <div class="shp-cost clearfix"><span class="cart-lbl">Credit Ammount</span> <span class="cart-value">{{credits}}</span></div>
                             <div class="sub-cost clearfix"><span class="cart-lbl">Total Cost</span> <span class="cart-value">{{price}}</span></div>
-                            <div class="sub-cost clearfix"><span class="cart-lbl">Discount Percentage</span> <span class="cart-value">{{discount}}</span></div>
+                            <div class="sub-cost clearfix"><span class="cart-lbl">Price per credit</span> <span class="cart-value">{{ppc}}</span></div>
                             <div class="sub-cost clearfix"><span class="cart-lbl">Transaction Fee</span> <span class="cart-value">{{transactionFee}}</span></div>
                             <div class="ord-cost clearfix"><span class="cart-lbl">Order Total</span> <span class="cart-value">{{price + transactionFee}}</span></div>
                         </div>
