--- a/browser/js/common/directives/defaultNav/non-authorized.html
+++ b/browser/js/common/directives/defaultNav/non-authorized.html
@@ -36,9 +36,9 @@
                     <li><a ui-sref-active="active" ui-sref="home">Home</a></li>
                     <li><a ui-sref-active="active" ui-sref="courses">Courses</a></li>
                     <li><a ui-sref-active="active" ui-sref="teachers">Teachers</a></li>
-                    <li><a ui-sref-active="active" ui-sref="about">About</a></li>
-                    <li><a ui-sref-active="active" ui-sref="faq">FAQ</a></li>
-                    <li><a ui-sref-active="active" ui-sref="blog">Blog</a></li>
+                    <!-- <li><a ui-sref-active="active" ui-sref="about">About</a></li> -->
+                    <!-- <li><a ui-sref-active="active" ui-sref="faq">FAQ</a></li> -->
+<!--                     <li><a ui-sref-active="active" ui-sref="blog">Blog</a></li> -->
                     <li><a ui-sref-active="active" ui-sref="contact">Contact</a></li>
                 </ul>
             </div>
