--- a/browser/js/unauthorized/contact/contact.html
+++ b/browser/js/unauthorized/contact/contact.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-6 m-b-30">
                 <h3 class="sec-title b m-t-0">Contact Us  <span class="linedi m-l-0"></span></h3>
-                <p class="m-b-20">Aliquam erat volutpatuis finibus eroslacus cursus consequat leocongue nonum sociis natoque penatibus etmagnis.</p>
+                <p class="m-b-20">Please let us know if you have any questions, concerns or thoughts about Edvances or education in general!</p>
                 <form>
                     <div class="row">
                         <div class="col-md-10">
@@ -59,30 +59,28 @@
                     <div class="col-md-6 col-sm-6 m-b-30">
                         <h3 class="sec-title b m-t-0">Edvances  <span class="linedi m-l-0"></span></h3>
                         <ul class="contact-det">
-                            <li class="address">1234 Somehwre Road
-                                <br>Toronto, ON H3H H3H
-                                <br>Canada</li>
+                            <li class="address">171 Chin Swee Road
+                                <br>CES Centre 02-02
+                                <br>Singapore 19877</li>
                             <li class="trsocial">
-                                <a href="" target="_blank"><i class="fa fa-facebook"></i></a>
+<!--                                 <a href="" target="_blank"><i class="fa fa-facebook"></i></a>
                                 <a href="" target="_blank"><i class="fa fa-google-plus"></i></a>
                                 <a href="" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <a href="" target="_blank"><i class="fa fa-linkedin"></i></a> -->
                                 <a href="" target="_blank" class="red-text"><i class="fa fa-envelope"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <h3 class="sec-title b m-t-0">Support  <span class="linedi m-l-0"></span></h3>
                         <ul class="contact-det">
-                            <li class="phonecall">123-456-7890</li>
+                            <li class="phonecall">+65 63368558</li>
                             <li class="emailid">info@edvances.com</li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-md-12">
                         <div class="have-a-question">
-                            <h4 class="sec-title b m-t-0">Have A Question?</h4>
-                            <p>Aliquam erat volutpatuis finibus eroslacus cursus consequat leocongue nonum its sociis natoque penatibus etmagnis.</p>
-                            <a href="" class="btn blue">Ask A Question</a>
+                            <h4 class="sec-title b m-t-0">We look forward to hearing form you!</h4>
                         </div>
                     </div>
                 </div>
