--- a/browser/js/unauthorized/home/home.html
+++ b/browser/js/unauthorized/home/home.html
@@ -252,7 +252,7 @@
         </div>
     </div>
 </section>
-<section class="section-events">
+<!-- <section class="section-events">
     <div class="container">
         <div class="row">
             <div class="col-sm-4 upcoming-events">
@@ -289,4 +289,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
