--- a/browser/js/unauthorized/teacherList/teacherList.html
+++ b/browser/js/unauthorized/teacherList/teacherList.html
@@ -53,7 +53,7 @@
                             <a href="teacher-detail.html" class="event-img"><img src="img/teacher9.jpg" alt="Course Image" /></a>
                         </div>
                         <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
+                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">Jenny Lin</h3></a>
                             <p class="g-t t-pro">Chemistry Professor</p>
                             <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">5</span></p>
                         </div>
@@ -79,7 +79,7 @@
 <!--Quote End-->
 
 <!--Join Today Start-->
-<section class="section-action">
+<!-- <section class="section-action">
     <div class="container">
         <h3 class="sec-title m-t-0">Good Day! Here will be big title long that you find this is really long</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
@@ -87,7 +87,7 @@
             <a href="" class="btn join-btn">Join Today</a>
         </p>
     </div>
-</section>
+</section> -->
 <!--Join Today End-->
 
 </div>
