--- a/browser/js/authorized/profile/student.html
+++ b/browser/js/authorized/profile/student.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="teach-profile">
-                    <div class="teacherpro"><img src="https://edvances.blob.core.windows.net/profile-pictures/{{user.profilePic}}" alt="teacher detail" /></div>
+                    <div class="teacherpro"><img ng-src="{{user.profilePic}}" alt="teacher detail" /></div>
                     <div class="pro-degree"><span ng-if="user.location">Located in {{user.location}}</span></div>
                 </div>
             </div>
