--- a/browser/js/authorized/students/checkout/shoppingGallery.html
+++ b/browser/js/authorized/students/checkout/shoppingGallery.html
@@ -8,8 +8,7 @@
                 <tr>
                     <th style="width:50%">Product</th>
                     <th style="width:10%">Price</th>
-                    <th style="width:8%">Quantity</th>
-                    <th style="width:8%">Discount</th>
+                    <th style="width:8%">Price per credit</th>
                     <th style="width:10%"></th>
                 </tr>
             </thead>
@@ -20,18 +19,15 @@
                         <div class="row">
                             <div class="col-xs-3 cart-img"><img src="img/cart-course.jpg" alt="..." class="img-responsive" /></div>
                             <div class="col-xs-9">
-                                <h4 class="m-0 cart-tit">10 Credits</h4>
+                                <h4 class="m-0 cart-tit">3 Credits</h4>
                             </div>
                         </div>
                     </td>
-                    <td data-th="Price" class="price">$20.00</td>
-                    <td data-th="Quantity" class="qty">
-                        1
-                    </td>
-                    <td data-th="Price" class="price">10%</td>
+                    <td data-th="Price" class="price">$30</td>
+                    <td data-th="Price" class="price">$10</td>
                     <td class="actions clearfix" data-th="">
                         <td class="actions clearfix" data-th="">
-                        <button ng-click="checkout(10,20,0)" class="btn">Select</button>
+                        <button ng-click="checkout(3,30,10)" class="btn">Select</button>
                     </td>
                 </tr>
                 <!--First product end-->
@@ -41,18 +37,15 @@
                         <div class="row">
                             <div class="col-xs-3 cart-img"><img src="img/cart-course.jpg" alt="..." class="img-responsive" /></div>
                             <div class="col-xs-9">
-                                <h4 class="m-0 cart-tit">25 Credits</h4>
+                                <h4 class="m-0 cart-tit">6 Credits</h4>
                             </div>
                         </div>
                     </td>
-                    <td data-th="Price" class="price">$45.00</td>
-                    <td data-th="Quantity" class="qty">
-                        1
-                    </td>
-                    <td data-th="Price" class="price">10%</td>
+                    <td data-th="Price" class="price">$55</td>
+                    <td data-th="Price" class="price">$9.17</td>
                     <td class="actions clearfix" data-th="">
                         <td class="actions clearfix" data-th="">
-                        <button ng-click="checkout(25,45,10)" class="btn">Select</button>
+                        <button ng-click="checkout(6,55,9.17)" class="btn">Select</button>
                     </td>
                     </td>
                 </tr>
@@ -63,18 +56,49 @@
                         <div class="row">
                             <div class="col-xs-3 cart-img"><img src="img/cart-course.jpg" alt="..." class="img-responsive" /></div>
                             <div class="col-xs-9">
-                                <h4 class="m-0 cart-tit">50 Credits</h4>
+                                <h4 class="m-0 cart-tit">12 Credits</h4>
                             </div>
                         </div>
                     </td>
-                    <td data-th="Price" class="price">$75.00</td>
-                    <td data-th="Quantity" class="qty">
-                        1
-                    </td>
-                    <td data-th="Price" class="price">25%</td>
+                    <td data-th="Price" class="price">$105.00</td>
+                    <td data-th="Price" class="price">$8.75</td>
                     <td class="actions clearfix" data-th="">
                         <td class="actions clearfix" data-th="">
-                        <button ng-click="checkout(50,75,25)" class="btn">Select</button>
+                        <button ng-click="checkout(12,105,8.75)" class="btn">Select</button>
+                    </td>
+                    </td>
+                </tr>
+                <tr>
+                    <td data-th="Product" class="car-pro-tit">
+                        <div class="row">
+                            <div class="col-xs-3 cart-img"><img src="img/cart-course.jpg" alt="..." class="img-responsive" /></div>
+                            <div class="col-xs-9">
+                                <h4 class="m-0 cart-tit">24 Credits</h4>
+                            </div>
+                        </div>
+                    </td>
+                    <td data-th="Price" class="price">$200.00</td>
+                    <td data-th="Price" class="price">$8.33</td>
+                    <td class="actions clearfix" data-th="">
+                        <td class="actions clearfix" data-th="">
+                        <button ng-click="checkout(24,200,8.33)" class="btn">Select</button>
+                    </td>
+                    </td>
+                </tr>
+                <tr>
+                    <td data-th="Product" class="car-pro-tit">
+                        <div class="row">
+                            <div class="col-xs-3 cart-img"><img src="img/cart-course.jpg" alt="..." class="img-responsive" /></div>
+                            <div class="col-xs-9">
+                                <h4 class="m-0 cart-tit">36 Credits</h4>
+                            </div>
+                        </div>
+                    </td>
+                    <td data-th="Price" class="price">$290.00</td>
+                    <td data-th="Price" class="price">$8.05</td>
+                    <td class="actions clearfix" data-th="">
+                        <td class="actions clearfix" data-th="">
+                        <button ng-click="checkout(36,290,8.05)" class="btn">Select</button>
                     </td>
                     </td>
                 </tr>
