--- a/browser/js/unauthorized/courses/courses.html
+++ b/browser/js/unauthorized/courses/courses.html
@@ -13,14 +13,14 @@
             <div class="col-md-8">
                 <div class="sort-wrap clearfix">
                     <form class="form-horizontal sort-from" method="get">
-                        <div class="select-field clearfix">
+                        <!-- <div class="select-field clearfix">
                             <label class="float-lt control-label">Sort by: </label>
                             <div class="sort-drop">
                                 <select name="carlist" form="carform" class="form-control ">
                                     <option value="">Subject</option>
                                 </select>
                             </div>
-                        </div>
+                        </div> -->
                     </form>
                     <div class="view-as clearfix">
                         <a class="view thumbnail-view active" href="javascript:void(0)"><i class="fa fa-th"></i></a>
@@ -31,10 +31,10 @@
                     <div class="row course-view">
                         <div class="col-md-6" ng-repeat="classroom in classrooms">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img ng-src="https://edvances.blob.core.windows.net/class-thumbnails/{{classroom.image}}" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img ng-src="{{classroom.image}}" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">{{classroom.title}} <span class="course-cost">{{classroom.cost}}</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">{{classroom.title}} <span class="course-cost">{{classroom.cost}}</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> {{classroom.firstName}} {{classroom.lastName}}</strong> <span class="g-t">in:</span> <strong>{{classroom.subject}}</strong></p>
                                 <p class="block-des">{{classroom.description}}</p>
                                 <div class="course-ctrl clearfix">
@@ -45,10 +45,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img src="img/course2.jpg" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img src="img/course2.jpg" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> Greg Crestman</strong> <span class="g-t">in:</span> <strong>Mathematics</strong></p>
                                 <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt ut labore et dolore magna aliq adipisicing elit, sed...</p>
                                 <div class="course-ctrl clearfix">
@@ -63,10 +63,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img src="img/course3.jpg" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img src="img/course3.jpg" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> Greg Crestman</strong> <span class="g-t">in:</span> <strong>Mathematics</strong></p>
                                 <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt ut labore et dolore magna aliq adipisicing elit, sed...</p>
                                 <div class="course-ctrl clearfix">
@@ -81,10 +81,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img src="img/course1.jpg" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img src="img/course1.jpg" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> Greg Crestman</strong> <span class="g-t">in:</span> <strong>Mathematics</strong></p>
                                 <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt ut labore et dolore magna aliq adipisicing elit, sed...</p>
                                 <div class="course-ctrl clearfix">
@@ -97,10 +97,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img src="img/course2.jpg" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img src="img/course2.jpg" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> Greg Crestman</strong> <span class="g-t">in:</span> <strong>Mathematics</strong></p>
                                 <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt ut labore et dolore magna aliq adipisicing elit, sed...</p>
                                 <div class="course-ctrl clearfix">
@@ -115,10 +115,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="course-img-wrap">
-                                <a href="course-detail.html" class="event-img"><img src="img/course3.jpg" alt="Course Image" /></a>
+                                <a ui-sref="course-details" class="event-img"><img src="img/course3.jpg" alt="Course Image" /></a>
                             </div>
                             <div class="course-det">
-                                <a href="course-detail.html" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
+                                <a ui-sref="course-details" class="event-tit"><h3 class="second-tit">Fractions 101 <span class="course-cost">$18</span></h3></a>
                                 <p class="m-b-0"><span class="g-t">by:</span> <strong> Greg Crestman</strong> <span class="g-t">in:</span> <strong>Mathematics</strong></p>
                                 <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt ut labore et dolore magna aliq adipisicing elit, sed...</p>
                                 <div class="course-ctrl clearfix">
@@ -132,7 +132,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- pagination -->
+                    <!-- <div class="row">
                         <div class="col-md-12 pagion">
                             <a href="" class="prev disabled"><i class="fa fa-angle-left"></i></a>
                             <a href="" class="active">1</a>
@@ -140,7 +141,7 @@
                             <a href="">3</a>
                             <a href="" class="next"><i class="fa fa-angle-right"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-4 sorting-aside">
@@ -268,7 +269,7 @@
                         <a href=""> Frontend <span class="numbers">(06)</span></a>
                     </li>
                 </ul>
-                <h5 class="inner-title fet-crs-ttl">Featured Courses</h5>
+                <!-- <h5 class="inner-title fet-crs-ttl">Featured Courses</h5>
                 <div class="form-group fet-crs-list">
                     <div class="row">
                         <div class="col-md-5 col-xs-4 full-img">
@@ -309,7 +310,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
