fixes for classrooms

--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -27,8 +27,7 @@
                                 <whiteboard></whiteboard>
                             </div>
                             <div class="outlined no-top-border clearfix pad-10">
-                                <a href="" class="user-chat float-rt"><img src="img/wb-download.jpg" alt="..." /></a>
-                                <a href="" class="user-chat float-rt"><img src="img/wb-share.jpg" alt="..." /></a>
+                                <a ng-click="clearWhiteboard()" class="btn btn-danger float-rt">Erase</a>
                             </div>
                         </div>
                         <!--whiteboard end-->
