--- a/browser/js/common/modals/editClassroom/editClassroom.html
+++ b/browser/js/common/modals/editClassroom/editClassroom.html
@@ -37,7 +37,7 @@
 		<div class="row">
             <lable class="col-sm-2 control-label">Cost</lable>
             <div class="col-sm-6">
-            	<input type="integer" class="form-control" ng-model="temp_classroom.clost" required/>
+            	<input type="integer" class="form-control" ng-model="temp_classroom.cost" required/>
             </div>
         </div>
 	</div>
