--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -27,7 +27,7 @@
                     <input type="text" class="form-control" ng-model="user.teacherOptions.title" placeholder="Your preferred title">
                 </div>
             </div>
-            <div class="form-group" ng-show="user.role!=1">
+            <div class="form-group" ng-show="!teacher">
                 <label class="col-sm-2 control-label">Grade Level</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" placeholder="Highest Grade Level" ng-model="user.grade">
