--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -79,6 +79,12 @@
                                                         </select> -->
                                                     </div>
                                                 </div>
+                                                <div class="form-group select-field">
+                                                    <label class="col-sm-2 control-label">Cost </label>
+                                                    <div class="col-sm-4">
+                                                        <input type="number" class="form-control" ng-model = "newClassroom.cost"/>
+                                                    </div>
+                                                </div>
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Start Date</label>
                                                     <div class="col-sm-4">
