getting ready to launch

--- a/browser/js/authorized/profile/teacher.html
+++ b/browser/js/authorized/profile/teacher.html
@@ -8,11 +8,11 @@
                     <div class="pro-degree">{{user.teacherOptions.title}}</div>
                     <div class="timeperiods"><span ng-repeat="(key,value) in user.teacherOptions.times">{{weekdays[key]}}  from {{value.start | date:'HH:mm'}} - {{value.end | date:'HH:mm'}}</span></div>
                     <hr class="clearfix">
-                    <div class="teach-rate">
+<!--                     <div class="teach-rate">
                         <p>Teacher Rating</p>
                         <span class="aside-stars"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i></span>
-                    </div>
-                    <hr class="clearfix">
+                    </div> -->
+                    <!-- <hr class="clearfix"> -->
                 </div>
             </div>
         </div>
