--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -80,9 +80,9 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group select-field">
-                                                    <label class="col-sm-2 control-label">Cost </label>
+                                                    <label class="col-sm-2 control-label">Credit Cost </label>
                                                     <div class="col-sm-4">
-                                                        <input type="number" class="form-control" ng-model = "newClassroom.cost"/>
+                                                        <input type="number" onlyNumbers class="form-control" ng-model = "newClassroom.cost"/>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
